feat(case-detail): file hub, store optimization and category review improvements
- Refactor FileHubContent with improved document management UI
- Optimize case-detail-store with better state management
- Add CategoryReviewModal enhancements
- Update OverviewTab checklist detail panel
- Add document-path-parser utility
- Update labels config and case-detail types

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/labels/config.json
+++ b/labels/config.json
@@ -32,6 +32,14 @@
             "light": "#06B6D4",
             "dark": "#22D3EE"
           }
+        },
+        {
+          "id": "git",
+          "name": "Git",
+          "color": {
+            "light": "#F97316",
+            "dark": "#FB923C"
+          }
         }
       ]
     },
